complete the function of the change calculator and finshed the styling

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
       background: linear-gradient(to right, #3a6073, #3a7bd5);
     }
   </style>
+ <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css' />
+ <link rel='stylesheet/less' type='text/css' href='css/style.css' />
 </head>
 
 <body>
